hphp/hack/test/typecheck/shape30.php.exp
File "shape30.php", line 11, characters 3-20:
Invalid assignment (Typing[4057])
  File "shape30.php", line 10, characters 17-31:
  The field `y` is missing
  File "shape30.php", line 11, characters 9-11:
  The field `y` is defined
File "shape30.php", line 12, characters 10-14:
Invalid return type (Typing[4057])
  File "shape30.php", line 10, characters 17-31:
  The field `y` is missing
  File "shape30.php", line 5, characters 3-5:
  The field `y` is defined
